# orca-agent

./: .gitignore  README.md  dev-log.md  doc  envrc.template  pyproject.toml
.github/workflows/: test.yml
src/orca_agent/: __init__.py  agent.py  conversations.py  delete_messages.py  k8s_tools.py  pydantic_utils.py  runbook.py  slack_client.py
tests/: conftest.py  test_agent.py  test_k8s_tools.py  test_k8s_tools_realk8s.py  test_slack.py
