[project]
name = "orca-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jeff Fischer", email = "jeff.fischer@benedat.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "k8stools>=1.0.0",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[mcp,openai]>=0.3.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "slack-sdk>=3.35.0",
]

[project.scripts]
orca-agent = "orca_agent.agent:main"
delete-messages = "orca_agent.delete_messages:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "arize-phoenix>=11.4.0",
    "arize-phoenix-otel>=0.12.1",
    "ipython>=9.3.0",
    "openinference-instrumentation-pydantic-ai>=0.1.3",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-exporter-otlp>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

